--- a/style.css
+++ b/style.css
@@ -64,40 +64,40 @@ nav {
     width: 100%;
     margin: 1rem;
   }
-}
 
-.nav-link {
-  display: inline;
-  font: 500 1rem Overused Grotesk, sans-serif;
-}
+  .nav-link {
+    display: inline;
+    font: 500 1rem Overused Grotesk, sans-serif;
 
-.nav-alink {
-  display: block;
-  position: relative;
-  text-decoration: none;
-  color: var(--black);
-  transition: transform 0.4s;
-  padding: 0.4rem;
+    .nav-alink {
+      display: block;
+      position: relative;
+      text-decoration: none;
+      color: var(--black);
+      transition: transform 0.4s;
+      padding: 0.4rem;
 
-  &:hover {
-    font-style: italic;
-    transform: translateY(-4px);
-  }
+      &:hover {
+        font-style: italic;
+        transform: translateY(-4px);
+      }
 
-  &::before {
-    opacity: 0;
-    font-size: var(--page-border-radius);
-    content: "•";
-    position: absolute;
-    line-height: 0;
-    bottom: 2px;
-    left: 50%;
-    transform: translateX(-50%);
-    transition: opacity 0.4s;
-  }
+      &::before {
+        opacity: 0;
+        font-size: var(--page-border-radius);
+        content: "•";
+        position: absolute;
+        line-height: 0;
+        bottom: 2px;
+        left: 50%;
+        transform: translateX(-50%);
+        transition: opacity 0.4s;
+      }
 
-  &:hover::before {
-    opacity: 100%;
+      &:hover::before {
+        opacity: 100%;
+      }
+    }
   }
 }
 
@@ -194,46 +194,6 @@ h2 {
   }
 }
 
-#projects {
-  background-color: var(--black);
-  border-radius: var(--page-border-radius);
-  padding-bottom: 8rem;
-  position: relative;
-  transform-style: preserve-3d;
-
-  h2 {
-    color: var(--main);
-  }
-
-  @media screen and (max-width: 600px) {
-    padding-bottom: 0;
-  }
-}
-
-
-img {
-  background-color: white;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(9, 1fr);
-  grid-template-rows: repeat(15, 60px);
-  margin: 0;
-  gap: 30px 100px;
-  padding: 0 9rem 3rem 9rem;
-  transform-style: preserve-3d;
-
-  @media screen and (max-width: 1200px) {
-    padding: 0 5rem 5rem 5rem;
-  }
-
-  @media screen and (max-width: 950px) {
-    display: block;
-    padding: 0 3rem 3rem 3rem;
-  }
-}
-
 @property --transparent-angle {
   syntax: '<angle>';
   inherits: false;
@@ -252,59 +212,91 @@ img {
   initial-value: 80deg;
 }
 
-.box {
-  height: 100%;
+#projects {
+  background-color: var(--black);
+  border-radius: var(--page-border-radius);
+  padding-bottom: 8rem;
   position: relative;
-  border-radius: var(--radius);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-  transition: filter 0.4s;
-  text-decoration: none;
+  transform-style: preserve-3d;
 
-  .content>img {
-    filter: brightness(0.95);
+  h2 {
+    color: var(--main);
   }
-}
 
-.grid:has(.box:hover) .box:not(:hover) .content>img {
-  filter: grayscale(100%) brightness(0.95);
-  transform: scale(0.995);
-  transition: filter 0.4s;
-}
+  @media screen and (max-width: 600px) {
+    padding-bottom: 0;
+  }
 
-.box::before {
-  content: "";
-  background:
-    conic-gradient(var(--black), transparent var(--block-angle)),
-    conic-gradient(var(--main) var(--black-angle), transparent var(--transparent-angle));
-  position: absolute;
-  width: 170%;
-  padding-bottom: 170%;
-  transform: rotate(20deg);
-  transition: --transparent-angle 0.4s, --block-angle 0.4s, --black-angle 0.4s, transform 0.4s;
-}
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(9, 1fr);
+    grid-template-rows: repeat(15, 60px);
+    margin: 0;
+    gap: 30px 100px;
+    padding: 0 9rem 3rem 9rem;
+    transform-style: preserve-3d;
 
-.box:hover::before {
-  --transparent-angle: 360deg;
-  --black-angle: 360deg;
-  --block-angle: 0deg;
-  transform: rotate(150deg);
-  transition: --transparent-angle 0.6s, --block-angle 0.8s, --black-angle 0.8s, transform 1s;
-}
+    @media screen and (max-width: 1200px) {
+      padding: 0 5rem 5rem 5rem;
+    }
 
-.content {
-  position: absolute;
-  inset: var(--border-width);
-  border-radius: calc(var(--radius) - var(--border-width));
-  overflow: hidden;
+    @media screen and (max-width: 950px) {
+      display: block;
+      padding: 0 3rem 3rem 3rem;
+    }
 
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: transform 0.4s;
+    .box {
+      height: 100%;
+      position: relative;
+      border-radius: var(--radius);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+      transition: filter 0.4s;
+      text-decoration: none;
+
+      .content {
+        position: absolute;
+        inset: var(--border-width);
+        border-radius: calc(var(--radius) - var(--border-width));
+        overflow: hidden;
+        transition: transform 0.4s, filter 0.4s;
+
+        img {
+          filter: brightness(0.95);
+          background-color: white;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+
+      &::before {
+        content: "";
+        background:
+          conic-gradient(var(--black), transparent var(--block-angle)),
+          conic-gradient(var(--main) var(--black-angle), transparent var(--transparent-angle));
+        position: absolute;
+        width: 170%;
+        padding-bottom: 170%;
+        transform: rotate(20deg);
+        transition: --transparent-angle 0.4s, --block-angle 0.4s, --black-angle 0.4s, transform 0.4s;
+      }
+
+      &:hover::before {
+        --transparent-angle: 360deg;
+        --black-angle: 360deg;
+        --block-angle: 0deg;
+        transform: rotate(150deg);
+        transition: --transparent-angle 0.6s, --block-angle 0.8s, --black-angle 0.8s, transform 1s;
+      }
+    }
+
+    &:has(.box:hover) .box:not(:hover) .content {
+      filter: grayscale(100%) brightness(0.95);
+      transform: scale(0.99);
+    }
   }
 }
 
@@ -314,11 +306,11 @@ img {
   color: var(--main);
   letter-spacing: -1px;
   position: relative;
-}
 
-.project-titles-right {
-  display: flex;
-  justify-content: flex-end;
+  &-right {
+    display: flex;
+    justify-content: flex-end;
+  }
 }
 
 @media screen and (min-width: 950px) {
@@ -387,8 +379,8 @@ img {
   transform: translateZ(0.5px) scale(0.9) rotate(0.5deg);
 
   a>div>img {
-    object-fit: contain;
-    background-color: var(--main);
+    object-fit: contain !important;
+    background-color: var(--main) !important;
   }
 }
 
