--- a/style.css
+++ b/style.css
@@ -44,61 +44,64 @@ nav {
   justify-content: center;
   z-index: 100;
   pointer-events: none;
-}
 
-.nav-links {
-  width: 30%;
-  background: rgba(220, 220, 220, 0.5);
-  backdrop-filter: blur(10px);
-  padding: 0.4rem 0.8rem 0.6rem 0.8rem;
-  border-radius: 1.2rem;
-  display: flex;
-  justify-content: space-between;
-  pointer-events: all;
+  .nav-links {
+    width: 30%;
+    background: rgba(220, 220, 220, 0.5);
+    backdrop-filter: blur(10px);
+    padding: 0.4rem 0.8rem 0.6rem 0.8rem;
+    border-radius: 1.2rem;
+    display: flex;
+    justify-content: space-around;
+    pointer-events: all;
 
-  @media (max-width: 1200px) {
-    width: 50%;
-  }
+    @media (max-width: 1200px) {
+      width: 50%;
+    }
 
-  @media (max-width: 600px) {
-    width: 100%;
-    margin: 1rem;
-  }
+    @media (max-width: 600px) {
+      width: 100%;
+      margin: 1rem;
+    }
 
-  .nav-link {
-    display: inline;
-    font: 500 1rem Overused Grotesk, sans-serif;
+    .nav-link {
+      display: inline;
+      font: 500 1.1rem Overused Grotesk, sans-serif;
 
-    .nav-alink {
-      display: block;
-      position: relative;
-      text-decoration: none;
-      color: var(--black);
-      transition: transform 0.4s;
-      padding: 0.4rem;
-
-      &:hover {
-        font-style: italic;
-        transform: translateY(-4px);
+      @media (max-width: 600px) {
+        font-size: 1rem;
       }
 
-      &::before {
-        opacity: 0;
-        font-size: var(--page-border-radius);
-        content: "•";
-        position: absolute;
-        line-height: 0;
-        bottom: 2px;
-        left: 50%;
-        transform: translateX(-50%);
-        transition: opacity 0.4s;
+      .nav-alink {
+        display: block;
+        position: relative;
+        text-decoration: none;
+        color: var(--black);
+        transition: transform 0.4s;
+        padding: 0.4rem;
+        z-index: 1;
+        transition: color 0.4s;
       }
 
-      &:hover::before {
-        opacity: 100%;
+      &.hover .nav-alink {
+        color: var(--main);
       }
     }
+
+    .pill {
+      content: "";
+      position: absolute;
+      left: 10%;
+      top: 15%;
+      height: 70%;
+      background-color: var(--black);
+      border-radius: 999px;
+      transition: all 0.5s cubic-bezier(0.31, 0.02, 0.36, 1.39);
+      opacity: 90%;
+      box-shadow: inset 0px 0px 5px 1px rgba(0, 0, 0, 0.2);
+    }
   }
+
 }
 
 #hello {
@@ -117,13 +120,13 @@ nav {
     color: var(--black);
     letter-spacing: -1px;
     line-height: 1;
-    transform: translateZ(1.5px) scale(0.75);
+    /* transform: translateZ(1.5px) scale(0.75); */
 
     margin-top: 0;
     margin-bottom: 3rem;
 
-    opacity: calc(1 - var(--scroll) + 0.2);
-    filter: blur(calc((var(--scroll) - 0.2) * 20px));
+    opacity: calc(1 - var(--scroll) + 0.1);
+    filter: blur(calc((var(--scroll) - 0.1) * 20px));
 
     @media (max-width: 1200px) {
       font-size: 7rem;
@@ -391,7 +394,7 @@ h2 {
   }
 }
 
-.this {
+#this {
   grid-area: 2/1/span 5/span 4;
   text-wrap: nowrap;
   transform: translateZ(0.5px) scale(0.9) rotate(0.5deg);
@@ -402,12 +405,12 @@ h2 {
   }
 }
 
-.cvwo {
+#cvwo {
   grid-area: 1/4/span 5/span 6;
   transform: translateZ(1px) scale(0.8) rotate(-0.5deg);
 
   a>div>img {
-    object-fit: contain;
+    object-fit: contain !important;
 
     &:hover {
       object-fit: cover;
@@ -416,13 +419,13 @@ h2 {
   }
 }
 
-.canrecycle {
+#canrecycle {
   grid-area: 7/2/span 6/span 4;
   text-wrap: nowrap;
   transform: translateZ(1.5px) scale(0.7) rotate(-0.5deg);
 }
 
-.forum {
+#forum {
   grid-area: 6/5/span 6/span 4;
   text-wrap: nowrap;
   transform: translateZ(1px) scale(0.8) rotate(0.5deg);
@@ -433,19 +436,19 @@ h2 {
   }
 }
 
-.reposense {
+#reposense {
   grid-area: 12/1/span 8/span 5;
   text-wrap: nowrap;
   transform: translateZ(1px) scale(0.85) rotate(0.5deg) translateX(10px);
 }
 
-.schism {
+#schism {
   grid-area: 12/5/span 7/span 5;
   text-wrap: nowrap;
   transform: translateZ(1px) scale(0.8) rotate(-0.5deg);
 
-  a>div>img {
-    object-fit: contain;
+  .box .content>img {
+    object-fit: contain !important;
     object-position: 0 60%
   }
 }
@@ -582,10 +585,11 @@ h2 {
     padding: 1.5rem 2rem;
     border-radius: 2rem;
     box-sizing: border-box;
-    transition: box-shadow 0.4s;
+    transition: all 0.4s;
 
     &:hover {
       box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.2);
+      background-color: rgba(255, 255, 255, 0.25);
     }
 
     span {
