--- a/style.css
+++ b/style.css
@@ -157,16 +157,18 @@ nav {
       color: var(--accent);
     }
   }
-}
 
-/* #hello::before {
-  content: "";
-  position: absolute;
-  background-color: var(--main);
-  inset: 0;
-  transform: translateZ(-4.5px) scale(2);
-  z-index: -1;
-} */
+
+  &::after {
+    content: "";
+    position: absolute;
+    background-color: var(--main);
+    bottom: calc(-1 * var(--page-border-radius));
+    height: calc(2 * var(--page-border-radius));
+    width: 100%;
+    z-index: -1;
+  }
+}
 
 #bio {
   background-color: var(--main);
@@ -233,7 +235,7 @@ h2 {
   .grid {
     display: grid;
     grid-template-columns: repeat(9, 1fr);
-    grid-template-rows: repeat(15, 60px);
+    grid-template-rows: repeat(22, 60px);
     margin: 0;
     gap: 30px 100px;
     padding: 0 9rem 3rem 9rem;
@@ -272,6 +274,7 @@ h2 {
           width: 100%;
           height: 100%;
           object-fit: cover;
+          transition: transform 0.4s;
         }
       }
 
@@ -297,7 +300,7 @@ h2 {
     }
 
     &:has(.box:hover) .box:not(:hover) .content {
-      filter: grayscale(100%) brightness(0.95);
+      filter: grayscale(100%) brightness(0.9);
       transform: scale(0.99);
     }
   }
@@ -438,18 +441,23 @@ h2 {
 }
 
 .reposense {
-  grid-area: 12/1/span 8/span 5;
+  grid-area: 12/1/span 6/span 5;
   transform: translateZ(1px) scale(0.85) rotate(0.5deg) translateX(10px);
 }
 
 .schism {
-  grid-area: 12/5/span 7/span 5;
+  grid-area: 12/5/span 5/span 5;
   transform: translateZ(1px) scale(0.8) rotate(-0.5deg);
 
   .box .content>img {
     object-fit: contain !important;
     object-position: 0 60%
   }
+}
+
+.accessibility {
+  grid-area: 18/2/span 7/span 7;
+  transform: translateZ(0.8px) scale(0.84);
 }
 
 @media screen and (max-width: 950px) {
