--- a/style.css
+++ b/style.css
@@ -86,6 +86,11 @@ nav {
       &.hover .nav-alink {
         color: var(--main);
       }
+
+      &:hover~.pill {
+        opacity: 0.75;
+        box-shadow: inset 0 0 7px 1px rgba(0, 0, 0, 0.6)
+      }
     }
 
     .pill {
@@ -96,7 +101,7 @@ nav {
       height: 70%;
       background-color: var(--black);
       border-radius: 999px;
-      transition: all 0.5s cubic-bezier(0.31, 0.02, 0.36, 1.39);
+      transition: all 0.4s cubic-bezier(0.48, 0, 0, 1);
       opacity: 90%;
       box-shadow: inset 0px 0px 5px 1px rgba(0, 0, 0, 0.2);
     }
